<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:mContext=".Login.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <include layout="@layout/snippet_top_toolbar_back" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="150dp"
                android:onClick="onImageClick"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:background="@drawable/ic_profile_substitute"
                app:civ_border_color="@color/black"
                app:civ_border_width="0.5dp"
                app:civ_circle_background_color="@color/white" />

            <Button
                android:padding="8dp"
                android:onClick="onImageClick"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="Upload Image"
                android:textColor="@color/white"
                android:background="@drawable/blue_rounded_button"
                android:layout_height="wrap_content" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profileImage"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/enter_full_name_hint"
                    android:hint="@string/your_full_name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/fill_email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <EditText
                    android:id="@+id/input_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Contact No."
                    android:hint="Contact No."
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/password_fill"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_password"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/white_rounded_button"
                android:padding="12dp"
                android:text="@string/sign_up" />


        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:visibility="invisible" />
    </RelativeLayout>


</ScrollView>